[package]
name = "twow-gm-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bytes = "1"
hmac = "0.12"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
